# tunedd-backend-challenge-main

./: .env.example  .gitignore  README.md  docker-compose.amd.override.yml  docker-compose.nvidia.override.yml  docker-compose.yml  main.py  pyproject.toml
data/.adk/: session.db
tunedd_api/: agent.py  settings.py
tunedd_api/.adk/: session.db
tunedd_api/ingest/: pdf_ingest.py
tunedd_api/rag/: tool.py
